2010-01-30  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-cycle-connections): Change docstring, it
	doesn't make connection buffer-local.
	* doc/slime.texi (Multiple connections): document
	slime-cycle-connections.

	* swank.lisp (pathname-as-directory): Treat "/foo/bar" and "/foo/bar/"
	the same.
	(compile-file-output): Use the above function.

2010-01-28  Mark Evenson  <evenson@dada.local>

	* swank-abcl.lisp (emacs-inspect): Make inspection of Java objects
	toString() results dependent on explicit user request to avoid
	potentially computationally expensive operations.

2010-01-27  Stas Boukarev  <stassats@gmail.com>

	* swank-rpc.lisp: NIL -> nil (for unusual readtable settings).
	Spotted by Harald Hanche-Olsen.

2010-01-26  Mark Evenson  <evenson@dada.local>

	* swank-abcl.lisp: Import
	MOP::COMPUTE-APPLICABLE-METHODS-USING-CLASSES if it exists in the
	ABCL implementation.

2010-01-25  Tobias C. Rittweiler <tcr@freebits.de>

	* swank-allegro.lisp (redefinition-p, redefinition): New.
	(handle-compiler-warning): Add :severity for redefinitions,
	style-warnings, errors.

2010-01-21  Stas Boukarev  <stassats@gmail.com>

	* swank-ccl.lisp (with-frame): Put this macro before it's used.

2010-01-20  Terje Norderhaug <terje@in-progress.com>

	* swank.lisp (with-swank-protocol-error-handler): Refactor using safe-backtrace.
	* swank-rpc.lisp (make-swank-protocol-error): Delete call to swank:safe-backtrace
	to eliminate dependency on swank.lisp module.
	* swank-rpc.lisp (swank-protocol-error): Remove swank-protocol-error.backtrace
	as the capture of a safe-backtrace is covered by with-swank-protocol-error-handler.

2010-01-20  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-thread-kill): If the region is active, then
	kill all threads in the region.

2010-01-19  Stas Boukarev  <stassats@gmail.com>

	* swank-rpc.lisp (:swank-rpc): (:use :cl), SBCL
	doesn't use it by default.

2010-01-19  Terje Norderhaug  <terje@in-progress.com>
